# dcs

./: .gitignore  README.md  make_commander_structs.py  pyproject.toml
asgard-cred1-server/: .gitignore  Makefile  ZMQ_control_client.py  asgard_ZMQ_CRED1_server.c  asgard_cam_server  cooldown_sequence.c  cred1_FGSetup_16bit.cfg  cred1_cli_tools.c  cred1_cli_tools.h  cred1_onsky_server.c  cred1_split.json  debug  debug_kaya.c  dump.c  edt_cred1.cfg  server.old  test.c
asgard-dm-server/: .gitignore  17DW019#053.dm  17DW019#093.dm  17DW019#113.dm  17DW019#122.dm  DM_ZMQ_control_client.py  Makefile  README.md  asgard_ZMQ_MDM_server.c  asgard_commander_MDM_high_perf_server.c  asgard_commander_MDM_server.c
back-end-server/: back_end_server.py  rts_base.py
baldr/: Makefile  analyse_latency.py  baldr  baldr.cpp  baldr.h  baldr_ben.cpp  baldr_ben.h  baldr_bk.cpp  baldr_config_1.toml  baldr_config_2.toml  baldr_config_2_preTest.toml  baldr_config_2_prior_proj.toml  baldr_config_3.toml  build_test_toml.py  burst_window.h  check_input_toml.py  controller.h  dithertest  dithertest.cpp  dm_telemetry_recorder.cpp  estimate_transfer_function.py  first_light_baldr_notes.txt  latency.cpp  latency_test  latency_test.cpp  readme.txt  rtc.cpp  rtc_ben.cpp  rtc_bk.cpp  rtc_test  start_baldr_RTCs.sh  telemetry.cpp  test_things  test_things.cpp  tune_pid.py
calibration_frames/: gen_dark_bias_badpix.py
commander/: CMakeLists.txt  README.md  TEST
commander/examples/src/: .gitignore  Makefile  example.cpp
commander/src/: Makefile  server.cpp
commander/src/server/: socket.cpp
cred1view/: cred1view.py
dcs/: ZMQutils.py
heimdallr/: Makefile  ZMQ_control_client.py  commander_structs.h  def.toml  dl_offload.cpp  forward_ft.cpp  fringe_tracker.cpp  heim_state_machine.py  heimdallr  heimdallr.cpp  heimdallr.h  log_bl.py  log_pd_gd.py  matplotlib_plots.py  ps_for_testing.npy  save_ft_performance.py  test.py  test_eigen.cpp
lib/: .gitignore
libImageStreamIO/: ImCreate_ft.c  ImCreate_test.c  ImageStreamIO.c  ImageStruct.h  Makefile  imft
mcs_client/: cpp_server_simulators.py  mcs_client.py
pyeng_baldr/: baldr_live_gui.py  baldr_live_gui_patched.py  baldr_love_gui_light.py  toy_rtc_server.py
pyeng_heimdallr/: N1_hole_coordinates.txt  N1_hole_coordinates.txt.backup  (+6 more)
(+46 files in other folders)
